[project]
name = "autogluon-time-series"
version = "0.1.0"
description = "AutoGluon time series forecasting companion code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "autogluon.timeseries>=1.2.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.0.0,<2.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
